--- a/product .html
+++ b/product .html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="navbar navbar-expand-md" id="navbar">
                 <a class="navbar-brand" href="#"> <img src="./image/ganapathy.jpg" alt="" srcset="" width="50px"> </a>
-                <span class="title-name" style="font-size: 15px;">ஸ்ரீ செல்வ கணபதி ஸ்பிரிங்ஸ் <br> <span
+                <span class="title-name text-start" style="font-size: 15px;">ஸ்ரீ செல்வ கணபதி ஸ்பிரிங்ஸ் <br> <span
                         class="badge bg-primary" style="font-size: 10px;">SRI SELVA
                         GANAPATHY SPRINGS</span> </span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
@@ -54,7 +54,7 @@
     <main class=" container-fluid mt-2 mb-5" >
         <!--springs cards -->
         <div class="container">
-            <header class="product-header"> <span class="badge bg-dark"> Types Of Manufacturing Springs</span>
+            <header class="product-header text-center"> <span class="badge bg-dark"> Types Of Manufacturing Springs</span>
             </header>
             <!-- row-1 -->
             <div class="row mt-5 mx-auto ">
