--- a/product .html
+++ b/product .html
@@ -57,7 +57,7 @@
             <header class="product-header text-center"> <span class="badge bg-dark"> Types Of Manufacturing Springs</span>
             </header>
             <!-- row-1 -->
-            <div class="row mt-5 mx-auto ">
+            <div class="row mx-auto">
                 <div class="card-1 col-md-4 col-lg-4 ">
                     <div class="compression-spring-cards ">
                         <img src="./image/products images/stainless-steel-compression-spring-1 list.webp"
@@ -104,7 +104,7 @@
 
             <!-- row-2 -->
             <div class="row mt-5  mx-auto">
-                <div class="card-1 col-md-4 ">
+                <div class="card-1 col-md-4 mx-auto">
                     <div class="Torsion-spring-cards">
                         <img src="./image/products images/stainless-steel-double-torsion-springs-product-4.webp"
                             alt="compression spring" width="350px" height="250px">
